# orkestrator-next

./: .eslintrc.js  .gitignore  .prettierignore  .releaserc.json  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  alpaka.yml  cleanup.cjs  codegen.ts  components.json  dokuments.yml  electron-builder.yml  electron.vite.config.ts  elektro.yml  errors.txt  eslint.config.js  eslint.config.mjs  fluss.yml  graphql.config.yaml  graphql.schema.json  index.html  kabinet.yml  knip.json  kraph.yml  lok.yml  lovekit.yml  mikro.yml  mount_debug_panel.py  omero-ark.yml  package-lock.json  package.json  plate-components.json  port-next.yml  rekuest.yml  tailwind.config.js  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  (+12 more)
.claude/plans/: dreamy-inventing-dusk.md  fluttering-growing-owl.md  valiant-baking-tiger.md
.design-sync/: NOTES.md  config.json  conventions.md  entry.tsx  gen-entry.mjs
.design-sync/previews/: Accordion.tsx  Alert.tsx  Avatar.tsx  Badge.tsx  Breadcrumb.tsx  Button.tsx  Calendar.tsx  Card.tsx  Checkbox.tsx  Command.tsx  Dialog.tsx  Drawer.tsx  DropdownMenu.tsx  Empty.tsx  FancyInput.tsx  HoverBorderGradient.tsx  Input.tsx  InputGroup.tsx  Item.tsx  Kbd.tsx  Label.tsx  Pagination.tsx  Popover.tsx  Progress.tsx  RadioGroup.tsx  Select.tsx  Sheet.tsx  (+12 more)
resources/: ToyCar.glb
scripts/: notarize.mjs  remove-locales.cjs  typecheck-ratchet.mjs
src/: App.tsx  constants.tsx  index copy.css  index.css  linkers.tsx  main.tsx  root.tsx  types.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cmd.rs  lib.rs
(+3857 files in other folders)
